<resources>
    <string name="app_name">HeyTicket</string>
    <string name="top_title">HEY TICKET</string>
    <string name="ticket_name">아이유</string>
    <string name="ticket_open_time">오픈 예정</string>

    <string name="concert">콘서트</string>
    <string name="drama">연극</string>
    <string name="musical">뮤지컬</string>

    <string name="open_ticket">오픈예정 티켓</string>
    <string name="seller_ticket">판매 티켓</string>
    <string name="main_home">홈</string>
    <string name="main_recommend">추천</string>
    <string name="main_open_this_week">이번 주 공연 예정</string>
    <string name="main_more">더보기</string>
    <string name="main_ranking">마감임박 공연</string>
    <string name="main_recommend_content">관심 있는 정보 설정하고\n공연 추천 받아보세요</string>
    <string name="main_recommend_content_btn">관심 정보 설정</string>
    <string name="main_new_ticket">새로 나온 공연</string>
    <string name="main_recommended_ticket">관심 카테고리 맞춤 공연</string>
    <string name="main_favorites_ticket">찜한 공연</string>
    <string name="main_musical_ticket">뮤지컬 공연</string>
    <string name="main_theater_ticket">연극 공연</string>
    <string name="main_category">카테고리</string>
    <string name="main_my">마이</string>
    <string name="favorites_title">내 찜 목록</string>
    <string name="favorites_menu_label">찜 목록</string>
    <string name="favorites_empty_title">찜한 공연이 없어요</string>
    <string name="recently_viewed_title">최근 본 공연</string>
    <string name="recently_viewed_menu_label">최근 본 공연</string>
    <string name="recently_viewed_empty_title">아직 본 공연이 없어요</string>
    <string name="recommend_selector_title">관심 카테고리 선택</string>
    <string name="recommend_selector_content">선택한 카테고리 기준으로 공연을 추천해 드려요</string>
    <string name="recommend_selector_area">지역</string>
    <string name="recommend_selector_area_content">복수 선택 가능해요</string>
    <string name="recommend_selector_genre">공연 장르</string>
    <string name="recommend_selector_summary">지역 %1$d개 · 장르 %2$d개 선택</string>
    <string name="recommend_category_complete">완료</string>
    <string name="recommend_category_menu_label">관심 카테고리 설정</string>
    <string name="notifications_toggle_label">관심 공연 알림 받기</string>



    <string name="recommend_register">회원 가입</string>
    <string name="search_edit_text">공연명, 출연진, 아티스트 검색</string>
    <string name="search_empty_title">검색 결과가 없어요</string>
    <string name="search_empty_content">공연명 혹은 아티스트를\n 간단한 키워드로 입력하면 검색이 더 잘 돼요!</string>
    <string name="search_show_other_performance">다른 공연 둘러보기</string>
    <string name="search_performance">공연</string>
    <string name="search_exhibition">전시</string>
    <string name="search_artist">아티스트</string>
    <string name="search_sport">스포츠</string>

    <string name="category_detail_book">예매순</string>
    <string name="category_detail_sort_apply">적용</string>
    <string name="category_detail_sort">정렬</string>
    <string name="category_detail_recency">최신순</string>
    <string name="category_detail_view">조회수순</string>

    <string name="category_detail_filter">필터</string>
    <string name="category_detail_filter_area">지역</string>
    <string name="category_detail_filter_performance_day">공연일</string>
    <string name="category_detail_filter_progress_status">진행 상태</string>
    <string name="category_detail_filter_reservation_price">예매 가격</string>

    <string name="category_detail_filter_performance_day_select">선택한 날짜 이후의 공연이 보여져요.</string>
    <string name="category_detail_filter_reset">초기화</string>
    <string name="category_detail_filter_planned_performance">공연 예정</string>
    <string name="category_detail_filter_during_performance">공연 중</string>
    <string name="category_detail_filter_finish_performance">공연 종료</string>

    <string name="category_detail_filter_low_price">낮은 예매가 기준으로 적용돼요.</string>
    <string name="category_detail_filter_price_all">전체</string>
    <string name="category_detail_filter_price_1">1만원 미만</string>
    <string name="category_detail_filter_price_4">1 ~ 4만원</string>
    <string name="category_detail_filter_price_7">4 ~ 7만원</string>
    <string name="category_detail_filter_price_10">7 ~ 10만원</string>
    <string name="category_detail_filter_price_over">10만원 이상</string>

    <string name="category_detail_filter_area_all">전체</string>
    <string name="category_detail_filter_area_seoul">서울</string>
    <string name="category_detail_filter_area_gyeonggi">경기도</string>
    <string name="category_detail_filter_area_gangwon">강원도</string>
    <string name="category_detail_filter_area_chungcheongbuk">충청북도</string>
    <string name="category_detail_filter_area_chungcheongnam">충청남도</string>
    <string name="category_detail_filter_area_jeollabuk">전라북도</string>
    <string name="category_detail_filter_area_Jeollanam">전라남도</string>
    <string name="category_detail_filter_area_gyeongsangbuk">경상북도</string>
    <string name="category_detail_filter_area_gyeongsangnam">경상남도</string>

    <string name="search_recently">최근 검색어</string>
    <string name="search_cancel">취소</string>
    <string name="search_edit">편집</string>
    <string name="search_delete_all">전체 삭제</string>

    <string name="sample_text_default">샘플텍스트</string>
    <string name="cancel">취소</string>
    <string name="delete">삭제</string>
    <string name="delete_recently_search">최근 검색어를 모두 삭제하시겠어요?</string>

    <string name="ticket_detail_information">공연 정보</string>
    <string name="ticket_detail_information_date">기간</string>
    <string name="ticket_detail_information_period">시간</string>
    <string name="ticket_detail_information_cast">출연진</string>
    <string name="ticket_detail_information_price">예매가</string>
    <string name="ticket_detail_information_place">공연장</string>
    <string name="ticket_detail_information_detail">공연 상세</string>
    <string name="ticket_detail_information_detail_more">공연 상세 더 보기</string>
    <string name="ticket_detail_information_detail_close">공연 상세 닫기</string>
    <string name="ticket_detail_information_detail_different_ticket">이런 공연은 어때요?</string>
    <string name="ticket_detail_information_detail_etc">기타 정보</string>
    <string name="ticket_detail_information_detail_host">주최/기획</string>
    <string name="ticket_detail_information_detail_inquiry">고객문의</string>
    <string name="ticket_detail_information_detail_age">관람 등급</string>
    <string name="ticket_detail_information_detail_etc_cast">작가/출연진</string>
    <string name="ticket_detail_genre">데이터가 안내려와요ㅠㅠ</string>
    <string name="ticket_detail_status">D - day 데이터가 안내려와요ㅠㅠ</string>
    <string name="ticket_detail_go_reservation">예매하러 가기</string>

    <string name="kakao_share_title">이 공연 어때요? ❤❤</string>
    <string name="kakao_not_install">카카오톡이 설치되어 있지 않습니다.</string>
    <string name="kakao_share_performance_information">공연 정보</string>
    <string name="kakao_share_location">공연장 위치보기</string>

    <string name="login_email_address">이메일 주소</string>
    <string name="login_email_button">이메일로 계속하기</string>
    <string name="login_kakao_button">카카오로 계속하기</string>
    <string name="my_login_guide">로그인하고 마이페이지를 이용해보세요</string>
    <string name="my_logout_button">로그아웃</string>
    <string name="login_email_sample">hello@heyticket.co.kr</string>
    <string name="login_email_error">이메일 형식에 맞게 입력해 주세요</string>

    <string name="login_pw">비밀번호</string>
    <string name="login_pw_sample1">비밀번호 입력</string>
    <string name="login_pw_sample2">영문 대문자, 소문자, 숫자 포함 8자 이상</string>
    <string name="login_pw_find"><u>비밀번호 찾기</u></string>

    <string name="login">로그인</string>

    <string name="register_top">가입하기</string>
    <string name="register_send_email_validation_title">이메일 인증이 필요해요</string>
    <string name="register_send_email_validation_content">아래 이메일로 인증 코드를 보내드려요</string>
    <string name="register_send_email_validation_next">인증 코드 받기</string>

    <string name="register_send_email_code_title">인증 메일이 발송되었어요</string>
    <string name="register_send_email_code_content">입력하신 이메일 주소로 인증 코드가 발송되었어요.\n인증 코드를 입력해 주세요.</string>
    <string name="register_send_email_code">인증코드 입력</string>
    <string name="register_send_email_code_again"><u>인증 코드 다시 받기</u></string>
    <string name="register_send_email_code_6">6자리 입력</string>
    <string name="register_send_email_code_error">인증코드가 일치하지 않아요. 다시 입력해 주세요.</string>
    <string name="register_send_email_timer">유효시간</string>
    <string name="error_network_generic">일시적인 오류가 발생했어요. 잠시 후 다시 시도해 주세요.</string>
    <string name="register_send_email_timer_out">유효 시간이 지났어요.</string>
    <string name="register_send_email_code_again_toast">인증 코드를 다시 보내드렸어요.</string>

    <string name="pw_title">비밀번호 찾기</string>
    <string name="pw_content">입력한 이메일로 인증코드를 전송해 드릴게요</string>
    <string name="pw_next">다음</string>
    <string name="pw_content2">이메일 주소가 기억나지 않으시면\n다시 가입해 주세요.</string>

    <string name="register_send_email_finish">이메일 인증이 확인되었어요</string>
    <string name="register_close_popup">이 페이지에서 나가면 가입을 다시 진행해야 해요. 페이지에서 나갈까요?</string>
    <string name="register_close_confirm">확인</string>

    <string name="register_password_title">비밀번호를 입력해 주세요</string>
    <string name="register_email_confirm_finish">이메일 인증이 확인되었어요</string>

    <string name="register_recommend">관심 카테고리 선택</string>
    <string name="register_recommend_content">선택한 카테고리 기준으로 공연을 추천해 드려요</string>
    <string name="register_recommend_area_title">지역</string>
    <string name="register_recommend_area_content">복수 선택 가능해요</string>
    <string name="register_recommend_genre_title">공연 장르</string>
    <string name="register_recommend_genre_content">복수 선택 가능해요</string>

    <string name="register_recommend_keyword">관심 키워드 등록</string>
    <string name="register_recommend_keyword_content">입력한 키워드의 공연이 열리면 바로 알려드려요</string>
    <string name="register_recommend_edit_hint">공연, 출연진 입력</string>
    <string name="register_recommend_keyword_registration">등록</string>
    <string name="register_recommend_keyword_registration_sample1">이런 키워드를 등록할 수 있어요</string>
    <string name="register_performance_sample">공연</string>
    <string name="register_performance_sample_kind">캣츠, 아기상어, 베토벤, 맘마미아, 미스터트롯 등</string>
    <string name="register_performance_cast_sample">출연진</string>
    <string name="register_performance_cast_sample_kind">김윤아, 아이유, 박효신, 이은결, 최현우, 국립발레단 등</string>
    <string name="register_agree_push">관심 키워드 등록 시 키워드 알림 수신(앱 푸시, 카카오톡 알림톡)에 동의합니다.</string>
    <string name="register_provision"><u>회원 이용 약관</u></string>
    <string name="register_personal_information"><u>개인정보 처리 방침</u></string>
    <string name="register_personal_information_next">을 확인하고 동의합니다.</string>
    <string name="register_provision_agree">약관 동의</string>
    <string name="register_next_agree">다음</string>
    <string name="register_push_agree">관심 키워드 등록 시 키워드 알림 수신(앱 푸시, 카카오톡 알림톡)에 동의합니다.</string>
    <string name="register_provision_information_agree">회원 이용 약관과 개인정보 처리 방침을 확인하고 동의합니다.</string>
    <string name="register_finish">가입완료</string>

    <string name="state_before">D-%d</string>
    <string name="state_during">공연 중</string>
    <string name="state_finish">종료</string>

    <string name="sort_day">일간</string>
    <string name="sort_week">주간</string>
    <string name="sort_month">월간</string>
    <string name="sort_apply">적용</string>
    <string name="sort">정렬</string>

    <string name="sort_new">최근 등록순</string>
    <string name="sort_view">조회순</string>
    <string name="finish_app">앱을 종료하시겠어요?</string>
</resources>