<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_register_top"
            layout="@layout/include_register_password_top" />

        <TextView
            android:id="@+id/text_register_recommend_keyword"
            style="@style/Bold_111111_24"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_register_top"
            android:layout_marginTop="28dp"
            android:text="@string/register_recommend_keyword"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/text_register_recommend_content"
            style="@style/Regular_949494_14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_register_recommend_keyword"
            android:layout_marginTop="4dp"
            android:text="@string/register_recommend_keyword_content"
            android:textAlignment="center" />

        <LinearLayout
            android:id="@+id/layout_registration_keyword"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_below="@id/text_register_recommend_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/text_keyword"
                style="@style/Regular_CFD2D7_14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="8dp"
                android:layout_weight="4"
                android:background="@drawable/round_12_gray_white_2"
                android:hint="@string/register_recommend_edit_hint"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:paddingStart="16dp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btn_register_keyword"
                style="@style/Bold_white_14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/round_12_gray"
                android:enabled="false"
                android:stateListAnimator="@null"
                android:text="@string/register_recommend_keyword_registration" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/layout_register_keyword_sample"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_below="@id/layout_registration_keyword"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_8_gray_f5">

            <TextView
                android:id="@+id/text_register_keyword_sample1"
                style="@style/SemiBold_55555_13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:text="@string/register_recommend_keyword_registration_sample1" />

            <TextView
                android:id="@+id/text_register_performance_sample"
                style="@style/Medium_949494_12"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_register_keyword_sample1"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/register_performance_sample" />

            <TextView
                android:id="@+id/text_register_performance_sample_kind"
                style="@style/Regular_555555_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_register_keyword_sample1"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_register_performance_sample"
                android:text="@string/register_performance_sample_kind" />

            <TextView
                android:id="@+id/text_register_cast_sample"
                style="@style/Medium_949494_12"
                android:layout_width="32dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_register_performance_sample"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/register_performance_cast_sample" />

            <TextView
                android:id="@+id/text_register_cast_sample_kind"
                style="@style/Regular_555555_12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_register_performance_sample_kind"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@id/text_register_performance_sample"
                android:text="@string/register_performance_cast_sample_kind" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_keyword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/layout_button"
            android:layout_below="@id/layout_register_keyword_sample"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:visibility="visible"
            tools:listitem="@layout/item_recommend_keyword" />

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_next"
                style="@style/Bold_white_16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_12_black"
                android:stateListAnimator="@null"
                android:text="@string/register_next_agree" />
        </RelativeLayout>

        <include
            android:id="@+id/include_agree"
            layout="@layout/include_agree"
            android:visibility="gone" />
    </RelativeLayout>
</layout>
