<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_login_top"
            layout="@layout/include_login_top" />

        <TextView
            android:id="@+id/text_pw_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_top"
            android:layout_marginTop="23dp"
            android:fontFamily="@font/pretendard_bold"
            android:text="@string/pw_title"
            android:textAlignment="center"
            android:textColor="@color/black_111111"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/text_pw_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_pw_title"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_light"
            android:text="@string/pw_content"
            android:textAlignment="center"
            android:textColor="@color/gray_949494"
            android:textSize="14sp" />

        <FrameLayout
            android:id="@+id/layout_login_edit"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@id/text_pw_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="26dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_12_gray_white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_email_address"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/pretendard_light"
                    android:text="@string/login_email_address"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@+id/text_email_address"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:fontFamily="@font/pretendard_bold"
                    android:hint="@string/login_email_sample"
                    android:textColor="@color/black_202429"
                    android:textSize="14sp" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/text_email_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_edit"
            android:layout_marginStart="20dp"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/pretendard_light"
            android:text="@string/login_email_error"
            android:textColor="@color/red_FF334B"
            android:textSize="12sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_find_pw_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layout_button"
            android:layout_marginBottom="22dp"
            android:fontFamily="@font/pretendard_light"
            android:text="@string/pw_content2"
            android:textAlignment="center"
            android:textColor="@color/gray_949494"
            android:textSize="14sp" />

        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                android:id="@+id/btn_next"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/round_12_black"
                android:enabled="false"
                android:fontFamily="@font/pretendard_medium"
                android:stateListAnimator="@null"
                android:text="@string/pw_next"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>
    </RelativeLayout>
</layout>
