<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="vm"
            type="com.sypark.openTicket.model.LoginFirstViewModel" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/layout_login_top"
            layout="@layout/include_login_top" />

        <TextView
            android:id="@+id/text_logo"
            style="@style/Black_111111_32"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_top"
            android:layout_marginTop="60dp"
            android:gravity="center_horizontal"
            android:text="@string/top_title" />

        <FrameLayout
            android:id="@+id/layout_login_edit"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_below="@id/text_logo"
            android:layout_marginStart="16dp"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_12_gray_white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text_email_address"
                    style="@style/Medium_777777_12"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="11dp"
                    android:fontFamily="@font/pretendard_light"
                    android:text="@string/login_email_address"
                    android:textSize="12sp" />

                <EditText
                    android:id="@+id/edit_email"
                    style="@style/Bold_111111_14"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_below="@+id/text_email_address"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/login_email_sample"
                    android:imeOptions="actionGo"
                    android:text="parkseungyun1995@gmail.com"
                    android:windowSoftInputMode="adjustResize" />
            </RelativeLayout>
        </FrameLayout>

        <TextView
            android:id="@+id/text_email_error"
            style="@style/Regular_red_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_login_edit"
            android:layout_marginStart="20dp"
            android:layout_marginTop="6dp"
            android:text="@string/login_email_error"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_email"
            style="@style/Bold_white_16"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/text_email_error"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/round_12_gray"
            android:enabled="false"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:stateListAnimator="@null"
            android:text="@string/login_email_button" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <Button
                style="@style/Bold_2a2a2a_16"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="60dp"
                android:background="@drawable/round_12_yellow"
                android:minWidth="0dp"
                android:minHeight="0dp"
                android:stateListAnimator="@null"
                android:text="@string/login_kakao_button"
                android:textSize="16sp" />
        </RelativeLayout>

    </RelativeLayout>
</layout>
